--- a/public/style.css
+++ b/public/style.css
@@ -1,24 +1,27 @@
 body {
-  font-family: sans-serif;
-  margin: auto;
-  max-width: 1280px;
+    background-color: rgb(19, 20, 23);
+    color: rgb(199, 201, 211);
+    font-family: Lato, "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-.navbar {
-  background-color: #313236;
-  border-radius: 2px;
-  max-width: 800px;
+main {
+    background-color: rgb(44, 48, 58);
+    border-radius: 16px;
+    left: 50%;
+    padding: 16px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
 }
 
-.navbar a {
-  color: #aaa;
-  display: inline-block;
-  font-size: 15px;
-  padding: 10px;
-  text-decoration: none;
+ul {
+    list-style: none;
+    padding-left: 0;
 }
 
-.navbar a:hover {
-  color: #ffffff;
+a {
+    color: rgb(118, 218, 255);
 }
-
