--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,7 @@ body {
 main {
     background-color: rgb(44, 48, 58);
     border-radius: 16px;
+    box-sizing: border-box;
     left: 50%;
     padding: 16px;
     position: absolute;
